# sql-vs-python

./: README.md  codigo_python.py  exemplo_01.py  pyproject.toml  python.py  script_python.py  sql.py
