[tool.poetry]
name = "sql-vs-python"
version = "0.1.0"
description = ""
authors = ["Luciano Filho <lvgalvaofilho@gmail.com>"]
readme = "README.md"
packages = [{include = "sql_vs_python"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
pandasql = "^0.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
